--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ser322final",
   "private": true,
   "devDependencies": {
-    "express": "^4.14.1",
-    "mysql": "^2.13.0"
     "autoprefixer-core": "^5.2.1",
+    "express": "^4.14.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-cli": "^1.2.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -28,10 +28,14 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
-    "time-grunt": "^1.0.0",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "mysql": "^2.13.0",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.16.1"
   }
 }
